--- a/Vendetta Themes/Yeat.theme.css
+++ b/Vendetta Themes/Yeat.theme.css
@@ -11,3 +11,12 @@
 .userPopoutOverlayBackground-3A0Pcz {
   max-height: 60vh;
 }
+
+/* Make pronouns stand out more */
+[class*=pronouns] {
+  color: var(--text-normal);
+  font-size: 12px; font-weight: 800;
+  background: #ffffff20;
+  padding: 0.10rem 0.5rem; margin: 0.25rem 0 0 0;
+  border-radius: 1rem;
+}
