--- a/Vendetta Themes/Yeat.theme.css
+++ b/Vendetta Themes/Yeat.theme.css
@@ -12,11 +12,13 @@
   max-height: 60vh;
 }
 
-/* Make pronouns stand out more */
-[class*=pronouns] {
-  color: var(--text-normal);
-  font-size: 12px; font-weight: 800;
-  background: #ffffff20;
-  padding: 0.10rem 0.5rem; margin: 0.25rem 0 0 0;
-  border-radius: 1rem;
+/* spotify thing */
+@import url(https://anubisnekhet.github.io/discordCSS/couveSpotify.css);
+:root {
+  --spotify-color: var(--brand-experiment); /* brand-experiment */
+  --spotify-bg-color: var(--background-tertiary); /* background-tertiary */
+  --spotify-text-color: var(--header-primary); /* header-primary */
+  --spotify-subtext-color: var(--text-normal); /* text-normal */
+  --gradient-start-opacity: 0.6;
+  --gradient-end-opacity: 0.3;
 }
